--- a/.github/workflows/build-certificates.yaml
+++ b/.github/workflows/build-certificates.yaml
@@ -53,7 +53,7 @@ jobs:
       - name: Build image
         uses: ./.github/actions/build-and-push-container
         with:
-          dockerfile: domains/certificates/Query.API/Dockerfile
+          dockerfile: domains/certificates/Query.API/API/Dockerfile
           image-name: eo-certificates
           image-tag: ${{ needs.resolve-versions.outputs.image }}
           docker-context: domains/certificates/
