--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -9,10 +9,10 @@ on:
       - main
 
 jobs:
-  define-projects:
+  define-domains:
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ steps.define-projects.outputs.matrix }}
+      matrix: ${{ steps.define-domains.outputs.matrix }}
 
     steps:
       - uses: actions/checkout@v3
@@ -26,8 +26,8 @@ jobs:
           git checkout main
           git checkout -
 
-      - name: Find relevant projects
-        id: define-projects
+      - name: Find relevant domains
+        id: define-domains
         shell: bash
         env:
           REF: ${{ github.ref }}
@@ -63,7 +63,7 @@ jobs:
             exit 0
           fi
 
-          matrix=$(find domains -mindepth 1 -maxdepth 1 -type d | egrep "$pattern" | while read directory; do printf '{"project": "%s"}' "$directory"; done | jq -sc '.')
+          matrix=$(find domains -mindepth 1 -maxdepth 1 -type d | egrep "$pattern" | while read directory; do printf '{"domain": "%s"}' "$directory"; done | jq -sc '.')
 
           echo "::set-output name=matrix::${matrix}"
 
@@ -71,15 +71,15 @@ jobs:
           echo "$matrix" | jq -r '.'
           echo '::endgroup::'
 
-  define-domains:
+  define-build:
     runs-on: ubuntu-latest
-    needs: define-projects
-    if: ${{ needs.define-projects.outputs.matrix != '[]' }}
+    needs: define-domains
+    if: ${{ needs.define-domains.outputs.matrix != '[]' }}
     outputs:
       matrix: ${{ steps.define-parts.outputs.matrix }}
     strategy:
       matrix:
-        domain: ${{ fromJson(needs.define-projects.outputs.matrix) }}
+        build: ${{ fromJson(needs.define-domains.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v3
 
@@ -87,8 +87,8 @@ jobs:
         shell: bash
         id: define-parts
         run: |
-          chart='${{ matrix.projects.domain }}/chart'
-          projects=$(find '${{ matrix.projects.domain }}' -mindepth 2 -maxdepth 2 -name "*.csproj" -exec dirname {} \; | egrep -v '/Shared$' | while read directory; do printf '"%s"' "$directory"; done | jq -sc '.')
+          chart='${{ matrix.build.domain }}/chart'
+          projects=$(find '${{ matrix.build.domain }}' -mindepth 2 -maxdepth 2 -name "*.csproj" -exec dirname {} \; | egrep -v '/Shared$' | while read directory; do printf '"%s"' "$directory"; done | jq -sc '.')
 
           matrix=$(printf '{"chart":"%s", "projects":%s}' "$chart" "$projects")
           echo "::set-output name=matrix::${matrix}"
@@ -103,9 +103,14 @@ jobs:
     if: ${{ needs.define-domains.outputs.matrix != '[]' }}
     strategy:
       matrix:
-        domain: ${{ fromJson(needs.define-matrix.outputs.matrix) }}
+        build: ${{ fromJson(needs.define-matrix.outputs.matrix) }}
     steps:
       - uses: actions/checkout@v3
+
+      - name: Show it
+        shell: bash
+        run: |
+          echo '${{ matrix.build.domain }}'
 
   # resolve-versions:
   #   name: Resolve versions
