--- a/domains/certificates/Issuer/Issuer.Worker/Issuer.Worker.csproj
+++ b/domains/certificates/Issuer/Issuer.Worker/Issuer.Worker.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EnergyOriginEventStore" Version="0.0.5" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
   </ItemGroup>
 </Project>
