--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -9,10 +9,11 @@ on:
       - main
 
 jobs:
-  define-domains:
+  define-matrices:
     runs-on: ubuntu-latest
     outputs:
-      matrix: ${{ steps.define-domains.outputs.matrix }}
+      domains: ${{ steps.define-matrices.outputs.domains }}
+      projects: ${{ steps.define-domains.outputs.projects }}
 
     steps:
       - uses: actions/checkout@v3
@@ -27,12 +28,16 @@ jobs:
           git checkout -
 
       - name: Find relevant domains
-        id: define-domains
+        id: define-matrices
         shell: bash
         env:
           REF: ${{ github.ref }}
         run: |
           pattern=$(find domains -mindepth 1 -maxdepth 1 -type d -exec printf '^%s|' {} \; | sed 's/|$//g')
+
+          #FIXME: validate files in directories?
+          # domains/<>/chart/Chart.yaml
+          # domains/<>/chart/values.yaml
 
           echo 'Search pattern:'
           echo "$pattern"
@@ -58,124 +63,173 @@ jobs:
           echo "$pattern"
 
           if [ -z "$pattern" ]; then
-            echo 'Relevance pattern is empty, emitting empty matrix.'
-            echo '::set-output name=matrix::[]'
+            echo 'Relevance pattern is empty, emitting empty matrices.'
+            echo '::set-output name=domains::[]'
+            echo '::set-output name=projects::[]'
             exit 0
           fi
 
-          matrix=$(find domains -mindepth 1 -maxdepth 1 -type d | egrep "$pattern" | while read domain; do
+          domains=$(find domains -mindepth 1 -maxdepth 1 -type d | egrep "$pattern" | while read domain; do
             chart="$domain/chart"
             projects=$(find "$domain" -mindepth 2 -maxdepth 2 -name "*.csproj" -exec dirname {} \; | egrep -v '/Shared$' | egrep -v 'Tests$' | while read directory; do printf '"%s"' "$directory"; done | jq -sc '.')
             printf '{"chart":"%s","projects":%s}' "$chart" "$projects"
           done | jq -sc '.')
 
-          echo "::set-output name=matrix::${matrix}"
+          domains=$(printf "$domains" | jq '[.[].chart] | unique')
+          echo "::set-output name=domains::${domains}"
 
-          echo '::group::Matrix'
-          echo "$matrix" | jq -r '.'
+          echo '::group::Domains'
+          echo "$domains" | jq -r '.'
           echo '::endgroup::'
 
-  build-domain:
+          projects=$(printf "$domains" | jq '.[].projects[]' | jq -scr '. | unique')
+          echo "::set-output name=projects::${projects}"
+
+          echo '::group::Projects'
+          echo "$projects" | jq -r '.'
+          echo '::endgroup::'
+
+  build-projects:
     runs-on: ubuntu-latest
-    needs: define-domains
-    if: ${{ needs.define-domains.outputs.matrix != '[]' }}
+    needs: define-matrices
+    if: ${{ needs.define-matrices.outputs.projects != '[]' }}
     strategy:
       matrix:
-        build: ${{ fromJson(needs.define-domains.outputs.matrix) }}
+        build: ${{ fromJson(needs.define-matrices.outputs.projects) }}
     steps:
       - uses: actions/checkout@v3
 
-      - name: Show it
+      - name: Resolve paths
+        shell: bash
+        id: resolve-paths
+        run: |
+          project='${{ matrix.build }}'
+          docker='${{ matrix.build }}/Dockerfile'
+          solution=$(dirname '${{ matrix.build }}')
+          domain=$(dirname "$solution")
+
+          echo "solution=${solution}" >> $GITHUB_OUTPUT
+          echo "project=${project}" >> $GITHUB_OUTPUT
+          echo "docker=${docker}" >> $GITHUB_OUTPUT
+          echo "domain=${domain}" >> $GITHUB_OUTPUT
+
+      - name: Resolve image version
+        id: resolve-image
+        uses: ./.github/actions/get-semver
+        with:
+          yaml_file: ${{ steps.resolve-paths.outputs.project }}/chart-overrides.yaml
+          yaml_path: version
+
+      # - name: Resolve image name
+      #   id: resolve-image
+      #   uses: ./.github/actions/get-semver
+      #   with:
+      #     yaml_file: ${{ steps.resolve-paths.outputs.project }}/chart-overrides.yaml
+      #     yaml_path: version
+
+      - name: Validate image
+        uses: ./.github/actions/dotnet-validate-domain
+        with:
+          solution-file-folder: ${{ steps.resolve-paths.outputs.solution }}
+
+      - name: Build image
+        uses: ./.github/actions/build-and-push-container
+        with:
+          dockerfile: ${{ steps.resolve-paths.outputs.docker }}
+          image-name: eo-certificates # FIXME
+          image-tag: ${{ steps.resolve-image.outputs.semver }}
+          docker-context: ${{ steps.resolve-paths.outputs.domain }}
+
+  build-chart:
+    runs-on: ubuntu-latest
+    needs:
+      - define-matrices
+      - build-projects
+    if: ${{ needs.define-matrices.outputs.domains != '[]' }}
+    strategy:
+      matrix:
+        build: ${{ fromJson(needs.define-matrices.outputs.domains) }}
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Resolve paths
+        shell: bash
+        id: resolve-paths
+        run: |
+          domain='${{ matrix.build }}'
+          chart='${{ matrix.build }}/chart'
+          echo "domain=${domain}" >> $GITHUB_OUTPUT
+          echo "chart=${chart}" >> $GITHUB_OUTPUT
+
+      - name: Install yamlpath
+        uses: ./.github/actions/yamlpath-install
+
+      - name: Apply chart overrides
         shell: bash
         run: |
-          echo '${{ needs.define-domains.outputs.matrix }}'
-          echo '${{ matrix.build }}'
-          echo '${{ matrix.build.chart }}'
-          echo '${{ matrix.build.projects }}'
-          echo '${{ toJSON(matrix.build.projects) }}'
+          domain='${{ steps.resolve-paths.outputs.domain }}'
+          values='${{ steps.resolve-paths.outputs.domain }}/chart/values.yaml'
 
-  # resolve-versions:
-  #   name: Resolve versions
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     chart: ${{ steps.resolve-chart.outputs.semver }}
-  #     image: ${{ steps.resolve-image.outputs.semver }}
-  #   steps:
-  #     - uses: actions/checkout@v3
+          find "$domain" -name 'chart-overrides.yaml' | while read override; do
+            version=$(yaml-get --query version "$override")
+            path=$(yaml-get --query versionPath "$override")
+            yaml-set --change "$path" --value "$version" "$values" #FIXME: semver stuff?
+          done
 
-  #     - name: Resolve chart version
-  #       id: resolve-chart
-  #       uses: ./.github/actions/get-semver
-  #       with:
-  #         yaml_file: domains/certificates/chart/Chart.yaml
-  #         yaml_path: version
+      - name: Resolve chart version
+        id: resolve-chart
+        uses: ./.github/actions/get-semver
+        with:
+          yaml_file: ${{ steps.resolve-paths.outputs.chart }}/Chart.yaml
+          yaml_path: version
 
-  #     - name: Resolve image version
-  #       id: resolve-image
-  #       uses: ./.github/actions/get-semver
-  #       with:
-  #         yaml_file: domains/certificates/chart/values.yaml
-  #         yaml_path: api.image.tag
+      - name: Release chart
+        id: release-chart
+        uses: ./.github/actions/helm-release-chart
+        with:
+          chart_folder: ${{ steps.resolve-paths.outputs.chart }}
+          chart_version: ${{ steps.resolve-chart.outputs.semver }}
+          include_image_name: true
+          deploy_key: ${{ secrets.DEPLOY_KEY_HELM_CHARTS }}
 
-  # publish:
-  #   name: Publish container
-  #   needs: resolve-versions
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v3
+  update-environment:
+    runs-on: ubuntu-latest
+    needs:
+      - build-chart
+    if: ${{ needs.define-matrices.outputs.domains != '[]' }} && (github.event_name == 'push' && github.ref_name == 'main' || github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'preview/'))
+    strategy:
+      matrix:
+        build: ${{ fromJson(needs.define-matrices.outputs.domains) }}
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - name: Validate image
-  #       uses: ./.github/actions/dotnet-validate-domain
-  #       with:
-  #         solution-file-folder: domains/certificates/Query.API/
+      - name: Resolve paths
+        shell: bash
+        id: resolve-paths
+        run: |
+          chart='${{ matrix.build }}/chart'
+          echo "chart=${chart}" >> $GITHUB_OUTPUT
 
-  #     - name: Build image
-  #       uses: ./.github/actions/build-and-push-container
-  #       with:
-  #         dockerfile: domains/certificates/Query.API/Dockerfile
-  #         image-name: eo-certificates
-  #         image-tag: ${{ needs.resolve-versions.outputs.image }}
-  #         docker-context: domains/certificates/
+      - name: Resolve chart version
+        id: resolve-chart
+        uses: ./.github/actions/get-semver
+        with:
+          yaml_file: ${{ steps.resolve-paths.outputs.chart }}/Chart.yaml
+          yaml_path: version
 
-  # release-chart:
-  #   name: Release chart
-  #   needs: [publish, resolve-versions]
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     chart-name: ${{ steps.release-chart.outputs.chart_name }}
-  #     chart-version: ${{ steps.release-chart.outputs.chart_version }}
-  #   steps:
-  #     - uses: actions/checkout@v3
+      - name: Get info from Chart.yaml
+        id: chart-info
+        uses: ./.github/actions/chart-info
+        with:
+          chart-folder: ${{ steps.resolve-paths.outputs.chart }}
+          chart-version: ${{ steps.resolve-chart.outputs.semver }}
+          include-image-name: true
 
-  #     - name: Update image tag
-  #       uses: ./.github/actions/yaml-set
-  #       with:
-  #         yaml_file: domains/certificates/chart/values.yaml
-  #         yaml_path: api.image.tag
-  #         value: ${{ needs.resolve-versions.outputs.image }}
-
-  #     - name: Release chart
-  #       id: release-chart
-  #       uses: ./.github/actions/helm-release-chart
-  #       with:
-  #         chart_folder: domains/certificates/chart
-  #         chart_version: ${{ needs.resolve-versions.outputs.chart }}
-  #         include_image_name: true
-  #         deploy_key: ${{ secrets.DEPLOY_KEY_HELM_CHARTS }}
-
-  # update-environment:
-  #   name: Update preview environment
-  #   needs: [resolve-versions, release-chart]
-  #   runs-on: ubuntu-latest
-  #   if: github.event_name == 'push' && github.ref_name == 'main' || github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'preview/')
-  #   steps:
-  #     - uses: actions/checkout@v3
-
-  #     - name: Update environment
-  #       uses: ./.github/actions/update-base-environment
-  #       with:
-  #         env_branch: ${{ github.event_name == 'push' && github.ref_name == 'main' && 'main' || github.event.pull_request.head.ref }}
-  #         app_name: ${{ needs.release-chart.outputs.chart-name }}
-  #         chart_name: ${{ needs.release-chart.outputs.chart-name }}
-  #         chart_version: ${{ needs.resolve-versions.outputs.chart }}
-  #         deploy_key: ${{ secrets.DEPLOY_KEY_BASE_ENVIRONMENT }}
+      - name: Update environment
+        uses: ./.github/actions/update-base-environment
+        with:
+          env_branch: ${{ github.event_name == 'push' && github.ref_name == 'main' && 'main' || github.event.pull_request.head.ref }}
+          app_name: ${{ steps.chart-info.outputs.chart-name }}
+          chart_name: ${{ steps.chart-info.outputs.chart-name }}
+          chart_version: ${{ steps.resolve-chart.outputs.semver }}
+          deploy_key: ${{ secrets.DEPLOY_KEY_BASE_ENVIRONMENT }}
