--- a/domains/certificates/Query.API/API/Dockerfile
+++ b/domains/certificates/Query.API/API/Dockerfile
@@ -1,9 +1,9 @@
-FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
+FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine AS base
 WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
+FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine AS build
 WORKDIR /src
 COPY ["Query.API/API/API.csproj", "Query.API/API/"]
 RUN dotnet restore "Query.API/API/API.csproj"
