--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -127,46 +127,40 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Resolve paths
+      - name: install yamlpath
+        uses: ./.github/actions/yamlpath-install
+
+      - name: Resolve
         shell: bash
-        id: resolve-paths
+        id: resolver
         run: |
           project='${{ matrix.build }}'
           docker='${{ matrix.build }}/Dockerfile'
           solution=$(dirname '${{ matrix.build }}')
           domain=$(dirname "$solution")
+          overrides="${project}/chart-overrides.yaml"
+          version=$(sh ./.github/actions/yaml-semver/run.sh . "$overrides" version "${{ github.event.pull_request.number }}")
+          name=$(dirname $(yaml-get --query name "$overrides"))
 
           echo "solution=${solution}" >> $GITHUB_OUTPUT
           echo "project=${project}" >> $GITHUB_OUTPUT
           echo "docker=${docker}" >> $GITHUB_OUTPUT
           echo "domain=${domain}" >> $GITHUB_OUTPUT
-
-      - name: Resolve image version
-        id: resolve-image
-        uses: ./.github/actions/yaml-semver
-        with:
-          yaml_file: ${{ steps.resolve-paths.outputs.project }}/chart-overrides.yaml
-          yaml_path: version
-
-      # - name: Resolve image name
-      #   id: resolve-image
-      #   uses: ./.github/actions/get-semver
-      #   with:
-      #     yaml_file: ${{ steps.resolve-paths.outputs.project }}/chart-overrides.yaml
-      #     yaml_path: version
+          echo "version=${version}" >> $GITHUB_OUTPUT
+          echo "name=${name}" >> $GITHUB_OUTPUT
 
       - name: Validate image
         uses: ./.github/actions/dotnet-validate-domain
         with:
-          solution-file-folder: ${{ steps.resolve-paths.outputs.solution }}
+          solution-file-folder: ${{ steps.resolver.outputs.project }}
 
-      # - name: Build image
-      #   uses: ./.github/actions/build-and-push-container
-      #   with:
-      #     dockerfile: ${{ steps.resolve-paths.outputs.docker }}
-      #     image-name: eo-certificates # FIXME
-      #     image-tag: ${{ steps.resolve-image.outputs.semver }}
-      #     docker-context: ${{ steps.resolve-paths.outputs.domain }}
+      - name: Build image
+        uses: ./.github/actions/build-and-push-container
+        with:
+          dockerfile: ${{ steps.resolver.outputs.docker }}
+          image-name: ${{ steps.resolver.outputs.name }}
+          image-tag: ${{ steps.resolver.outputs.version }}
+          docker-context: ${{ steps.resolver.outputs.domain }}
 
   build-chart:
     runs-on: ubuntu-latest
@@ -206,58 +200,58 @@ jobs:
 
       - name: Resolve chart version
         id: resolve-chart
-        uses: ./.github/actions/get-semver
+        uses: ./.github/actions/yaml-semver
         with:
-          yaml_file: ${{ steps.resolve-paths.outputs.chart }}/Chart.yaml
-          yaml_path: version
+          yaml-file: ${{ steps.resolve-paths.outputs.chart }}/Chart.yaml
+          yaml-path: version
 
-      # - name: Release chart
-      #   id: release-chart
-      #   uses: ./.github/actions/helm-release-chart
-      #   with:
-      #     chart_folder: ${{ steps.resolve-paths.outputs.chart }}
-      #     chart_version: ${{ steps.resolve-chart.outputs.semver }}
-      #     include_image_name: true
-      #     deploy_key: ${{ secrets.DEPLOY_KEY_HELM_CHARTS }}
+      - name: Release chart
+        id: release-chart
+        uses: ./.github/actions/helm-release-chart
+        with:
+          chart_folder: ${{ steps.resolve-paths.outputs.chart }}
+          chart_version: ${{ steps.resolve-chart.outputs.semver }}
+          include_image_name: true
+          deploy_key: ${{ secrets.DEPLOY_KEY_HELM_CHARTS }}
 
-  # update-environment:
-  #   runs-on: ubuntu-latest
-  #   needs:
-  #     - build-chart
-  #   if: ${{ needs.define-matrices.outputs.domains != '[]' }} && (github.event_name == 'push' && github.ref_name == 'main' || github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'preview/'))
-  #   strategy:
-  #     matrix:
-  #       build: ${{ fromJson(needs.define-matrices.outputs.domains) }}
-  #   steps:
-  #     - uses: actions/checkout@v3
+  update-environment:
+    runs-on: ubuntu-latest
+    needs:
+      - build-chart
+    if: ${{ needs.define-matrices.outputs.domains != '[]' }} && (github.event_name == 'push' && github.ref_name == 'main' || github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'preview/'))
+    strategy:
+      matrix:
+        build: ${{ fromJson(needs.define-matrices.outputs.domains) }}
+    steps:
+      - uses: actions/checkout@v3
 
-  #     - name: Resolve paths
-  #       shell: bash
-  #       id: resolve-paths
-  #       run: |
-  #         chart='${{ matrix.build }}/chart'
-  #         echo "chart=${chart}" >> $GITHUB_OUTPUT
+      - name: Resolve paths
+        shell: bash
+        id: resolve-paths
+        run: |
+          chart='${{ matrix.build }}/chart'
+          echo "chart=${chart}" >> $GITHUB_OUTPUT
 
-  #     - name: Resolve chart version
-  #       id: resolve-chart
-  #       uses: ./.github/actions/get-semver
-  #       with:
-  #         yaml_file: ${{ steps.resolve-paths.outputs.chart }}/Chart.yaml
-  #         yaml_path: version
+      - name: Resolve chart version
+        id: resolve-chart
+        uses: ./.github/actions/yaml-semver
+        with:
+          yaml-file: ${{ steps.resolve-paths.outputs.chart }}/Chart.yaml
+          yaml-path: version
 
-  #     - name: Get info from Chart.yaml
-  #       id: chart-info
-  #       uses: ./.github/actions/chart-info
-  #       with:
-  #         chart-folder: ${{ steps.resolve-paths.outputs.chart }}
-  #         chart-version: ${{ steps.resolve-chart.outputs.semver }}
-  #         include-image-name: true
+      - name: Get info from Chart.yaml
+        id: chart-info
+        uses: ./.github/actions/chart-info
+        with:
+          chart-folder: ${{ steps.resolve-paths.outputs.chart }}
+          chart-version: ${{ steps.resolve-chart.outputs.semver }}
+          include-image-name: true
 
-  #     - name: Update environment
-  #       uses: ./.github/actions/update-base-environment
-  #       with:
-  #         env_branch: ${{ github.event_name == 'push' && github.ref_name == 'main' && 'main' || github.event.pull_request.head.ref }}
-  #         app_name: ${{ steps.chart-info.outputs.chart-name }}
-  #         chart_name: ${{ steps.chart-info.outputs.chart-name }}
-  #         chart_version: ${{ steps.resolve-chart.outputs.semver }}
-  #         deploy_key: ${{ secrets.DEPLOY_KEY_BASE_ENVIRONMENT }}
+      - name: Update environment
+        uses: ./.github/actions/update-base-environment
+        with:
+          env_branch: ${{ github.event_name == 'push' && github.ref_name == 'main' && 'main' || github.event.pull_request.head.ref }}
+          app_name: ${{ steps.chart-info.outputs.chart-name }}
+          chart_name: ${{ steps.chart-info.outputs.chart-name }}
+          chart_version: ${{ steps.resolve-chart.outputs.semver }}
+          deploy_key: ${{ secrets.DEPLOY_KEY_BASE_ENVIRONMENT }}
