--- a/.github/actions/helm-release-chart/action.yml
+++ b/.github/actions/helm-release-chart/action.yml
@@ -66,7 +66,9 @@ runs:
 
     - name: Packages chart
       shell: bash
-      run: helm package --version ${{  inputs.chart_version }} ${{ inputs.chart_folder }}
+      run: |
+        helm package --version ${{  inputs.chart_version }} ${{ inputs.chart_folder }}
+        exit 1 #FIXME: REMOVE
 
     - name: Create Release
       id: create_release
