--- a/domains/certificates/Issuer/Issuer.Worker/Issuer.Worker.csproj
+++ b/domains/certificates/Issuer/Issuer.Worker/Issuer.Worker.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Serilog.Extensions.Logging" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\CertificateEvents\CertificateEvents.csproj" />
+  </ItemGroup>
 </Project>
