--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -11,6 +11,7 @@ on:
 jobs:
   debug:
     runs-on: ubuntu-latest
+    needs: define-matrices
     steps:
       - uses: actions/checkout@v3
 
@@ -28,6 +29,10 @@ jobs:
       - name: Debug semver output
         shell: bash
         run: echo "${{ steps.semver.outputs.semver }}"
+
+      - name: Debug domains matrix
+        shell: bash
+        run: echo "${{ needs.define-matrices.outputs.domains }}"
 
   define-matrices:
     runs-on: ubuntu-latest
@@ -196,8 +201,9 @@ jobs:
 
           find "$domain" -name 'chart-overrides.yaml' | while read override; do
             version=$(yaml-get --query version "$override")
+            version=$(sh ./.github/actions/yaml-semver/run.sh "$version" "${{ github.event.pull_request.number }}")
             path=$(yaml-get --query versionPath "$override")
-            yaml-set --change "$path" --value "$version" "$values" #FIXME: semver stuff?
+            yaml-set --change "$path" --value "$version" "$values"
           done
 
       - name: Resolve chart version
