--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -9,31 +9,6 @@ on:
       - main
 
 jobs:
-  debug:
-    runs-on: ubuntu-latest
-    needs: define-matrices
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Debug env
-        shell: bash
-        run: env
-
-      - name: Debug semver
-        uses: ./.github/actions/yaml-semver
-        id: semver
-        with:
-          yaml-file: domains/certificates/chart/Chart.yaml
-          yaml-path: version
-
-      - name: Debug semver output
-        shell: bash
-        run: echo "${{ steps.semver.outputs.semver }}"
-
-      - name: Debug domains matrix
-        shell: bash
-        run: echo "${{ needs.define-matrices.outputs.domains }}"
-
   define-matrices:
     runs-on: ubuntu-latest
     outputs:
@@ -122,7 +97,7 @@ jobs:
         shell: bash
         run: |
           echo '::group::Raw'
-          printf '${{ needs.define-matrices.outputs.domains }}'
+          printf '${{ needs.define-matrices.outputs.domains }}\n'
           echo '::endgroup::'
           printf '${{ needs.define-matrices.outputs.domains }}' | jq -r '.'
 
@@ -130,7 +105,7 @@ jobs:
         shell: bash
         run: |
           echo '::group::Raw'
-          printf '${{ needs.define-matrices.outputs.projects }}'
+          printf '${{ needs.define-matrices.outputs.projects }}\n'
           echo '::endgroup::'
           printf '${{ needs.define-matrices.outputs.projects }}' | jq -r '.'
 
@@ -215,6 +190,7 @@ jobs:
             version=$(yaml-get --query version "$override")
             version=$(sh ./.github/actions/yaml-semver/run.sh "$version" "${{ github.event.pull_request.number }}")
             path=$(yaml-get --query versionPath "$override")
+            printf 'Setting %s to %s in %s\n' "$path" "$version" "$values"
             yaml-set --change "$path" --value "$version" "$values"
           done
 
