Read master data from configuration

--- a/domains/certificates/Issuer/Issuer.Worker/appsettings.Development.json
+++ b/domains/certificates/Issuer/Issuer.Worker/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.Hosting.Lifetime": "Information"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "MockMasterData": {
+        "JsonFilePath":  "MasterDataService/data.json"
     }
-  }
 }
