Preparing to prepare the other domains

--- a/.github/actions/get-semver/action.yaml
+++ b/.github/actions/get-semver/action.yaml
@@ -44,6 +44,8 @@ runs:
       id: generate_semver
       shell: bash
       run: |
+        echo "::warning::Using deprecated semver action, use yaml-semver instead"
+
         cd ${{ inputs.git_checkout_folder }}
         if ${{ github.event_name == 'push' && github.ref_name == 'main' }}
         then
