--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -9,7 +9,7 @@ on:
       - main
 
 jobs:
-  define-matrices:
+  setup:
     runs-on: ubuntu-latest
     outputs:
       domains: ${{ steps.define-matrices.outputs.domains }}
@@ -19,6 +19,38 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+
+      - name: Validate required domain structure
+        shell: bash
+        run: |
+          function required_folder() {
+            test -d "$1" || ( printf '::error title=Missing folder::%s\n' "$1"; exit 1 )
+          }
+
+          function required_file() {
+            test -f "$1" || ( printf '::error title=Missing file::%s\n' "$1"; exit 1 )
+          }
+
+          find domains -mindepth 1 -maxdepth 1 -type d | while read domain; docker
+            required_folder "$domain/.devcontainer"
+            required_file "$domain/.devcontainer/Dockerfile"
+            required_file "$domain/.devcontainer/devcontainer.json"
+
+            required_folder "$domain/.vscode"
+            required_file "$domain/.vscode/settings.json"
+            required_file "$domain/.vscode/extensions.json"
+
+            required_file "$domain"/*.sln
+
+            required_folder "$domain/chart"
+            required_file "$domain/chart/Chart.yaml"
+            required_file "$domain/chart/values.yaml"
+
+            find "$domain" -mindepth 3 -maxdepth 3 -name "*.csproj" -exec dirname {} \; | egrep -v '[^\/]*/[^\/]*/Shared/[^\/]*' | egrep -v 'Tests$' | while read project; do
+              required_file "$project/chart-overrides.yaml"
+            done
+
+          done
 
       - name: Ensure main branch is known
         shell: bash
@@ -34,14 +66,6 @@ jobs:
           REF: ${{ github.ref }}
         run: |
           pattern=$(find domains -mindepth 1 -maxdepth 1 -type d -exec printf '^%s|' {} \; | sed 's/|$//g')
-
-          #FIXME: validate files in directories?
-          # domains/<>/chart/Chart.yaml
-          # domains/<>/chart/values.yaml
-          # domains/<>/*.sln
-          # domains/<>/<>/chart-overrides.yaml
-          # domains/<>/.devcontainer/**
-          # domains/<>/.vscode/**
 
           echo 'Search pattern:'
           echo "$pattern"
@@ -89,33 +113,29 @@ jobs:
           projects=$(printf "$matrix" | jq '.[].projects[]' | jq -scr '. | unique')
           echo "::set-output name=projects::${projects}"
 
-  defined-matrices:
-    runs-on: ubuntu-latest
-    needs: define-matrices
-    steps:
       - name: Relevant domains
         shell: bash
         run: |
           echo '::group::Raw'
-          printf '${{ needs.define-matrices.outputs.domains }}\n'
+          printf '${{ steps.define-matrices.outputs.domains }}\n'
           echo '::endgroup::'
-          printf '${{ needs.define-matrices.outputs.domains }}' | jq -r '.'
+          printf '${{ steps.define-matrices.outputs.domains }}' | jq -r '.'
 
       - name: Relevant projects
         shell: bash
         run: |
           echo '::group::Raw'
-          printf '${{ needs.define-matrices.outputs.projects }}\n'
+          printf '${{ steps.define-matrices.outputs.projects }}\n'
           echo '::endgroup::'
-          printf '${{ needs.define-matrices.outputs.projects }}' | jq -r '.'
+          printf '${{ steps.define-matrices.outputs.projects }}' | jq -r '.'
 
   build-projects:
     runs-on: ubuntu-latest
-    needs: define-matrices
-    if: ${{ needs.define-matrices.outputs.projects != '[]' }}
+    needs: setup
+    if: ${{ needs.setup.outputs.projects != '[]' }}
     strategy:
       matrix:
-        build: ${{ fromJson(needs.define-matrices.outputs.projects) }}
+        build: ${{ fromJson(needs.setup.outputs.projects) }}
     steps:
       - uses: actions/checkout@v3
 
@@ -159,12 +179,12 @@ jobs:
   build-chart:
     runs-on: ubuntu-latest
     needs:
-      - define-matrices
+      - setup
       - build-projects
-    if: ${{ needs.define-matrices.outputs.domains != '[]' }}
+    if: ${{ needs.setup.outputs.domains != '[]' }}
     strategy:
       matrix:
-        build: ${{ fromJson(needs.define-matrices.outputs.domains) }}
+        build: ${{ fromJson(needs.setup.outputs.domains) }}
     steps:
       - uses: actions/checkout@v3
 
@@ -214,10 +234,10 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build-chart
-    if: ${{ needs.define-matrices.outputs.domains != '[]' }} && (github.event_name == 'push' && github.ref_name == 'main' || github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'preview/'))
+    if: ${{ needs.setup.outputs.domains != '[]' }} && (github.event_name == 'push' && github.ref_name == 'main' || github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'preview/'))
     strategy:
       matrix:
-        build: ${{ fromJson(needs.define-matrices.outputs.domains) }}
+        build: ${{ fromJson(needs.setup.outputs.domains) }}
     steps:
       - uses: actions/checkout@v3
 
