--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -24,14 +24,14 @@ jobs:
         shell: bash
         run: |
           function required_folder() {
-            test -d "$1" || ( printf '::error title=Missing folder::%s\n' "$1"; exit 1 )
+            [ -d "$1" ] || { printf '::error title=Missing folder::%s\n' "$1"; exit 1 }
           }
 
           function required_file() {
-            test -f "$1" || ( printf '::error title=Missing file::%s\n' "$1"; exit 1 )
+            [ -f "$1" ] || { printf '::error title=Missing file::%s\n' "$1"; exit 1 }
           }
 
-          find domains -mindepth 1 -maxdepth 1 -type d | while read domain; docker
+          find domains -mindepth 1 -maxdepth 1 -type d | while read domain; do
             required_folder "$domain/.devcontainer"
             required_file "$domain/.devcontainer/Dockerfile"
             required_file "$domain/.devcontainer/devcontainer.json"
@@ -47,7 +47,8 @@ jobs:
             required_file "$domain/chart/values.yaml"
 
             find "$domain" -mindepth 3 -maxdepth 3 -name "*.csproj" -exec dirname {} \; | egrep -v '[^\/]*/[^\/]*/Shared/[^\/]*' | egrep -v 'Tests$' | while read project; do
-              required_file "$project/chart-overrides.yaml"
+              location=$(dirname "$project")
+              required_file "$location/chart-overrides.yaml"
             done
 
           done
