--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -23,12 +23,12 @@ jobs:
       - name: Validate required domain structure
         shell: bash
         run: |
-          function required_folder() {
-            [ -d "$1" ] || { printf '::error title=Missing folder::%s\n' "$1"; exit 1 }
+          function required_folder {
+            [ -d "$1" ] || { printf '::error title=Missing folder::%s\n' "$1"; exit 1; }
           }
 
-          function required_file() {
-            [ -f "$1" ] || { printf '::error title=Missing file::%s\n' "$1"; exit 1 }
+          function required_file {
+            [ -f "$1" ] || { printf '::error title=Missing file::%s\n' "$1"; exit 1; }
           }
 
           find domains -mindepth 1 -maxdepth 1 -type d | while read domain; do
