--- a/domains/measurements/chart/values.yaml
+++ b/domains/measurements/chart/values.yaml
@@ -1,8 +1,6 @@
 api:
   replicaCount: 3
   probes: true
-  image:
-    name: ghcr.io/energinet-datahub/eo-measurements
-    tag: 0.1.8
+  image: {}
   env:
     DATASYNCENDPOINT:
