--- a/.github/actions/build-and-push-container/action.yaml
+++ b/.github/actions/build-and-push-container/action.yaml
@@ -38,10 +38,10 @@ runs:
         username: ${{ github.actor }}
         password: ${{ github.token }}
 
-    # - name: Build and push Docker image
-    #   uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-    #   with:
-    #     context: ${{ inputs.docker-context }}
-    #     file: ${{ inputs.dockerfile }}
-    #     push: true
-    #     tags: ${{ steps.image-name.outputs.lowercase }}:${{ inputs.image-tag }}
+    - name: Build and push Docker image
+      uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+      with:
+        context: ${{ inputs.docker-context }}
+        file: ${{ inputs.dockerfile }}
+        push: true
+        tags: ${{ steps.image-name.outputs.lowercase }}:${{ inputs.image-tag }}
