--- a/domains/emissions/Emissions.API/API/Dockerfile
+++ b/domains/emissions/Emissions.API/API/Dockerfile
@@ -5,10 +5,10 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0.302 AS build
 WORKDIR /src
-COPY ["API/API.csproj", "API/"]
-RUN dotnet restore "API/API.csproj"
+COPY ["Emissions.API/API/API.csproj", "Emissions.API/API/"]
+RUN dotnet restore "Emissions.API/API/API.csproj"
 COPY . .
-WORKDIR "/src/API"
+WORKDIR "/src/Emissions.API/API"
 RUN dotnet build "API.csproj" -c Release -o /app/build
 
 FROM build AS publish
