--- a/.github/workflows/build-domain.yaml
+++ b/.github/workflows/build-domain.yaml
@@ -155,7 +155,7 @@ jobs:
           name=$(basename $(yaml-get --query name "$overrides"))
 
           version=$(yaml-get --query version "$overrides")
-          version=$(sh ./.github/actions/yaml-semver/run.sh "$version" "${{ github.event.pull_request.number }}")
+          version=$(sh ./.github/tooling/semver.sh "$version" "${{ github.event.pull_request.number }}")
 
           echo "service=${service}" >> $GITHUB_OUTPUT
           echo "project=${project}" >> $GITHUB_OUTPUT
@@ -205,14 +205,18 @@ jobs:
         shell: bash
         run: |
           domain='${{ steps.resolve-paths.outputs.domain }}'
-          values='${{ steps.resolve-paths.outputs.domain }}/chart/values.yaml'
+          pr='${{ github.event.pull_request.number }}'
 
-          find "$domain" -name 'chart-overrides.yaml' | while read override; do
-            version=$(yaml-get --query version "$override")
-            version=$(sh ./.github/actions/yaml-semver/run.sh "$version" "${{ github.event.pull_request.number }}")
-            path=$(yaml-get --query versionPath "$override")
-            printf 'Setting %s to %s in %s\n' "$path" "$version" "$values"
-            yaml-set --change "$path" --value "$version" "$values"
+          output="$domain/chart/values.yaml"
+          find "$domain" -name 'chart-overrides.yaml' | while read input; do
+              value=$(yaml-get --query version "$input")
+              value=$(sh ./.github/tooling/semver.sh "$value" "$pr")
+              path=$(yaml-get --query versionPath "$input")
+              yaml-set --change "$path" --value "$value" "$output"
+
+              value=$(yaml-get --query name "$input")
+              path=$(yaml-get --query namePath "$input")
+              yaml-set --change "$path" --value "$value" "$output"
           done
 
       - name: Resolve chart version
@@ -229,13 +233,65 @@ jobs:
           chart_folder: ${{ steps.resolve-paths.outputs.chart }}
           chart_version: ${{ steps.resolve-chart.outputs.semver }}
           include_image_name: true
-          deploy_key: ${{ secrets.DEPLOY_KEY_HELM_CHARTS }}
+
+  update-indices:
+    runs-on: ubuntu-latest
+    needs:
+      - setup
+      - build-chart
+    if: ${{ needs.setup.outputs.domains != '[]' }} && (github.event_name == 'push' && github.ref_name == 'main' || github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'preview/'))
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Checkout chart repository
+        uses: actions/checkout@v3
+        with:
+          path: helm-charts
+          repository: ${{ github.repository_owner }}/helm-charts
+          ssh-key: ${{ secrets.DEPLOY_KEY_HELM_CHARTS }}
+          ref: gh-pages
+
+      - name: Download chart tarball
+        id: download
+        shell: bash
+        working-directory: helm-charts
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: |
+          domains='${{ needs.setup.outputs.domains }}'
+          changes=$(printf '%s' "$domains" | jq '.[]' | while read domain; do
+            name=$(grep ^"name: " "$domain/chart/Chart.yaml" | cut -f2 -d' ')
+            version=$(grep ^"version: " "$domain/chart/Chart.yaml" | cut -f2 -d' ')
+            version=$(sh ./.github/tooling/semver.sh "$version" "${{ github.event.pull_request.number }}")
+
+            gh release download "$name-$version" --repo '${{ github.repository }}' --pattern "$name-$version.tgz" --dir './'
+            printf '"%s"\n' "$name-$version.tgz"
+          done | jq -sc '. + ["index.yaml"]')
+          files=$(echo "$changes" | jq 'map(select(. != "index.yaml")) | join(", ")')
+
+          echo "changes=${changes}" >> $GITHUB_OUTPUT
+          echo "files=${files}" >> $GITHUB_OUTPUT
+
+      - name: Update index file for helm registry
+        shell: bash
+        working-directory: helm-charts
+        run: helm repo index .
+
+      - name: Commit changes
+        uses: EndBug/add-and-commit@v9
+        with:
+          add: "${{ steps.download.outputs.changes }}"
+          message: "Updated the helm registry with files: ${{ steps.download.outputs.files }}"
+          push: --force
+          new_branch: gh-pages
+          default_author: github_actions
+          cwd: helm-charts
 
   update-environment:
     runs-on: ubuntu-latest
     needs:
-      - build-chart
-    if: ${{ needs.setup.outputs.domains != '[]' }} && (github.event_name == 'push' && github.ref_name == 'main' || github.event_name == 'pull_request' && startsWith(github.event.pull_request.head.ref, 'preview/'))
+      - setup
+      - update-indices
     strategy:
       matrix:
         build: ${{ fromJson(needs.setup.outputs.domains) }}
