--- a/.github/actions/helm-release-chart/action.yml
+++ b/.github/actions/helm-release-chart/action.yml
@@ -27,7 +27,7 @@ runs:
   steps:
     - name: Get info from Chart.yaml
       id: chart-info
-      uses: Energinet-DataHub/energy-origin/.github/actions/chart-info@main
+      uses: ./.github/actions/chart-info #TODO: Energinet-DataHub/energy-origin/.github/actions/chart-info@main
       with:
         chart-folder: ${{ inputs.chart_folder }}
         chart-version: ${{ inputs.chart_version }}
