--- a/domains/certificates/Query.API/API/Dockerfile
+++ b/domains/certificates/Query.API/API/Dockerfile
@@ -4,7 +4,7 @@ EXPOSE 80
 EXPOSE 443
 
 RUN apk add curl
-HEALTHCHECK --retries=1 CMD curl --fail http://localhost/health || exit 1
+HEALTHCHECK CMD curl --fail http://localhost/health || exit 1
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine AS build
 WORKDIR /src
