--- a/domains/certificates/Issuer/Issuer.Worker/Dockerfile
+++ b/domains/certificates/Issuer/Issuer.Worker/Dockerfile
@@ -1,5 +1,10 @@
-FROM mcr.microsoft.com/dotnet/runtime:6.0-alpine AS base
+FROM mcr.microsoft.com/dotnet/aspnet:6.0-alpine AS base
 WORKDIR /app
+EXPOSE 80
+EXPOSE 443
+
+RUN apk add curl
+HEALTHCHECK CMD curl --fail http://localhost/health || exit 1
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0-alpine AS build
 WORKDIR /src
