--- a/.github/actions/helm-release-chart/action.yml
+++ b/.github/actions/helm-release-chart/action.yml
@@ -124,8 +124,8 @@ runs:
 
     - name: Verify changes were pushed
       shell: bash
-      if: ${{ steps.commit.outputs.pushed }} == 'false'
+      if: ${{ steps.commit.outputs.pushed == 'false' }}
       run: |
         echo "::error::Nothing was committed or pushed"
-        echo "based on: ${{ steps.commit.outputs.pushed }} == 'false'"
+        echo "based on ${{ steps.commit.outputs.pushed }}"
         # exit 1
